<resources>
    <string name="app_name">Newser</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">RETRY</string>
    <string name="network_failed">Network Connection Failed</string>
    <string name="home">Home</string>
    <string name="science">Science</string>
    <string name="health">health</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="tech">Tech</string>
    <string name="entertainment">Entertainment</string>
</resources>
